--- a/src/components/GeneralInfo.css
+++ b/src/components/GeneralInfo.css
@@ -2,6 +2,7 @@ div.generalInfoForms {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  margin-top: 16px;
 }
 
 div.generalInfoForms input {
