--- a/src/components/PreviewCV.css
+++ b/src/components/PreviewCV.css
@@ -3,4 +3,79 @@ div.previewCV {
   aspect-ratio: 0.7071;
   background-color: white;
   border-radius: 16px;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (max-width: 1226px) {
+  div.previewCV {
+    display: none !important;
+  }
+}
+
+div.leftCV {
+  color: white;
+  background-color: rgb(42, 42, 42);
+  padding: 8px;
+  min-width: 148px;
+  max-width: 175px;
+  border-radius: 16px 0 0 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+div.upperLeftCV {
+  align-self: center;
+}
+
+div.leftCV h3 {
+  text-align: center;
+  color: rgb(84, 187, 187);
+  margin: 32px 0px 0px 0px;
+}
+
+div.leftCV ul {
+  font-size: small;
+  padding: 0px 8px;
+  list-style-type: none;
+}
+div.leftCV li {
+  padding: 4px 0;
+  word-wrap: break-word;
+}
+
+div.leftCV li span {
+  font-weight: bold;
+  color: rgb(84, 187, 187);
+}
+
+.skillsCV {
+  text-align: center;
+}
+
+div.rightCV {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+div.upperRightCV {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgb(42, 42, 42);
+}
+
+div.bottonRightCV {
+  width: 100%;
+}
+
+.workExperienceCV {
+  border-bottom: 0.5px solid rgb(42, 42, 42);
+}
+
+div.previewCV h1 {
+  text-align: center;
 }
