--- a/src/components/UserPhoto.css
+++ b/src/components/UserPhoto.css
@@ -1,13 +1,20 @@
 div.uploadPhoto {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 input[type="file"] {
   display: none;
 }
 label[for="img"] {
   background-color: grey;
-  border-radius: 8px;
+  border-radius: 4px;
   padding: 4px;
-  margin: 0 0 16px 0;
+}
+
+img[alt="uploadedImage"] {
+  max-width: 132px;
+  aspect-ratio: 3/4;
+  margin-bottom: 16px;
+  border-radius: 16px;
 }
