--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,12 @@ div.addedSkill button {
   padding: 4px 16px 16px 16px;
 }
 
-.forRefOnly {
+.previewMode {
   background-color: black;
+}
+
+@media (max-width: 1226px) {
+  div.previewMode {
+    display: none;
+  }
 }
